--- a/index.html
+++ b/index.html
@@ -1,10 +1,148 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>CoinLuxora</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CoinLuxora | Smart Investment Platform</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #0b0f19;
+      color: #ffffff;
+    }
+
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px;
+      background: #11162a;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 20px;
+      color: #4da3ff;
+    }
+
+    nav a {
+      margin-left: 15px;
+      color: #ffffff;
+      text-decoration: none;
+      font-size: 14px;
+    }
+
+    .hero {
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    .hero h2 {
+      font-size: 28px;
+      margin-bottom: 10px;
+    }
+
+    .hero p {
+      font-size: 15px;
+      color: #cfd3ff;
+      max-width: 500px;
+      margin: 0 auto 25px;
+    }
+
+    .buttons a {
+      display: inline-block;
+      margin: 8px;
+      padding: 12px 25px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-size: 14px;
+    }
+
+    .btn-primary {
+      background: #4da3ff;
+      color: #000;
+    }
+
+    .btn-secondary {
+      border: 1px solid #4da3ff;
+      color: #4da3ff;
+    }
+
+    .prices {
+      padding: 40px 20px;
+      background: #11162a;
+      text-align: center;
+    }
+
+    .price-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 15px;
+      max-width: 700px;
+      margin: auto;
+    }
+
+    .card {
+      background: #0b0f19;
+      padding: 20px;
+      border-radius: 8px;
+      border: 1px solid #1c2340;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 12px;
+      color: #888;
+    }
+  </style>
 </head>
-<body style="font-family: Arial; text-align: center; margin-top: 100px;">
-  <h1>Welcome to CoinLuxora</h1>
-  <p>Your investment platform is starting here.</p>
+<body>
+
+  <header>
+    <h1>CoinLuxora</h1>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Dashboard</a>
+      <a href="#">Login</a>
+      <a href="#">Sign Up</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h2>Smart Crypto, Forex & Stock Investments</h2>
+    <p>
+      Track your portfolio, monitor live markets, and manage crypto deposits
+      securely on one powerful platform.
+    </p>
+    <div class="buttons">
+      <a href="#" class="btn-primary">Create Account</a>
+      <a href="#" class="btn-secondary">Login</a>
+    </div>
+  </section>
+
+  <section class="prices">
+    <h3>Live Market Prices</h3>
+    <div class="price-grid">
+      <div class="card">
+        <strong>Bitcoin (BTC)</strong>
+        <p>$ --</p>
+      </div>
+      <div class="card">
+        <strong>Ethereum (ETH)</strong>
+        <p>$ --</p>
+      </div>
+      <div class="card">
+        <strong>Tether (USDT)</strong>
+        <p>$ 1.00</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    © 2026 CoinLuxora. All rights reserved.
+  </footer>
+
 </body>
 </html>
