--- a/index.html
+++ b/index.html
@@ -143,6 +143,25 @@
   <footer>
     © 2026 CoinLuxora. All rights reserved.
   </footer>
+<script>
+  async function loadPrices() {
+    try {
+      const res = await fetch(
+        "https://api.coingecko.com/api/v3/simple/price?ids=bitcoin,ethereum,tether&vs_currencies=usd"
+      );
+      const data = await res.json();
+
+      document.getElementById("btc").innerText = "$" + data.bitcoin.usd;
+      document.getElementById("eth").innerText = "$" + data.ethereum.usd;
+      document.getElementById("usdt").innerText = "$" + data.tether.usd;
+    } catch (e) {
+      console.log("Price fetch failed");
+    }
+  }
+
+  loadPrices();
+  setInterval(loadPrices, 30000);
+</script>
 
 </body>
 </html>
