--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
       securely on one powerful platform.
     </p>
     <div class="buttons">
-      <a href="#" class="btn-primary">Create Account</a>
-      <a href="#" class="btn-secondary">Login</a>
+      <a href="signup.html" class="btn-primary">Create Account</a>
+      <a href="login.html" class="btn-secondary">Login</a>
     </div>
   </section>
 
