--- a/index.html
+++ b/index.html
@@ -91,11 +91,6 @@
       border: 1px solid #1c2340;
     }
 
-    .card strong {
-      display: block;
-      margin-bottom: 8px;
-    }
-
     footer {
       text-align: center;
       padding: 20px;
@@ -106,70 +101,65 @@
 </head>
 <body>
 
-  <header>
-    <h1>CoinLuxora</h1>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Dashboard</a>
-      <a href="#">Login</a>
-      <a href="#">Sign Up</a>
-    </nav>
-  </header>
+<header>
+  <h1>CoinLuxora</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="dashboard.html">Dashboard</a>
+    <a href="login.html">Login</a>
+    <a href="signup.html">Sign Up</a>
+  </nav>
+</header>
 
-  <section class="hero">
-    <h2>Smart Crypto, Forex & Stock Investments</h2>
-    <p>
-      Track your portfolio, monitor live markets, and manage crypto deposits
-      securely on one powerful platform.
-    </p>
-    <div class="buttons">
-      <a href="signup.html" class="btn-primary">Create Account</a>
-      <a href="login.html" class="btn-secondary">Login</a>
+<section class="hero">
+  <h2>Smart Crypto, Forex & Stock Investments</h2>
+  <p>
+    Track your portfolio, monitor live markets, and manage crypto deposits
+    securely on one powerful platform.
+  </p>
+  <div class="buttons">
+    <a href="signup.html" class="btn-primary">Create Account</a>
+    <a href="login.html" class="btn-secondary">Login</a>
+  </div>
+</section>
+
+<section class="prices">
+  <h3>Live Market Prices</h3>
+  <div class="price-grid">
+    <div class="card">
+      <strong>Bitcoin (BTC)</strong>
+      <p id="btc">$ --</p>
     </div>
-  </section>
-
-  <section class="prices">
-    <h3>Live Market Prices</h3>
-    <div class="price-grid">
-      <div class="card">
-        <strong>Bitcoin (BTC)</strong>
-        <p id="btc">$ --</p>
-      </div>
-      <div class="card">
-        <strong>Ethereum (ETH)</strong>
-        <p id="eth">$ --</p>
-      </div>
-      <div class="card">
-        <strong>Tether (USDT)</strong>
-        <p id="usdt">$ 1.00</p>
-      </div>
+    <div class="card">
+      <strong>Ethereum (ETH)</strong>
+      <p id="eth">$ --</p>
     </div>
-  </section>
+    <div class="card">
+      <strong>Tether (USDT)</strong>
+      <p id="usdt">$ 1.00</p>
+    </div>
+  </div>
+</section>
 
-  <footer>
-    © 2026 CoinLuxora. All rights reserved.
-  </footer>
+<footer>
+  © 2026 CoinLuxora. All rights reserved.
+</footer>
 
-  <!-- LIVE PRICE SCRIPT -->
-  <script>
-    async function loadPrices() {
-      try {
-        const response = await fetch(
-          "https://api.coingecko.com/api/v3/simple/price?ids=bitcoin,ethereum,tether&vs_currencies=usd"
-        );
-        const data = await response.json();
+<script>
+  async function loadPrices() {
+    const res = await fetch(
+      "https://api.coingecko.com/api/v3/simple/price?ids=bitcoin,ethereum,tether&vs_currencies=usd"
+    );
+    const data = await res.json();
 
-        document.getElementById("btc").innerText = "$" + data.bitcoin.usd;
-        document.getElementById("eth").innerText = "$" + data.ethereum.usd;
-        document.getElementById("usdt").innerText = "$" + data.tether.usd;
-      } catch (error) {
-        console.log("Failed to load prices");
-      }
-    }
+    document.getElementById("btc").innerText = "$" + data.bitcoin.usd;
+    document.getElementById("eth").innerText = "$" + data.ethereum.usd;
+    document.getElementById("usdt").innerText = "$" + data.tether.usd;
+  }
 
-    loadPrices();
-    setInterval(loadPrices, 30000);
-  </script>
+  loadPrices();
+  setInterval(loadPrices, 30000);
+</script>
 
 </body>
 </html>
