--- a/admin.html
+++ b/admin.html
@@ -1,47 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
+<title>Coinluxora Admin Login</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Admin Login</title>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
 body{
   background:#020617;
-  color:white;
+  color:#e5e7eb;
   font-family:system-ui;
   padding:20px;
 }
+h2{margin-bottom:10px}
 input,button{
   width:100%;
   padding:12px;
-  margin-bottom:10px;
+  margin-bottom:12px;
   border-radius:8px;
+  border:none;
+}
+input{
+  background:#020617;
+  border:1px solid #1e293b;
+  color:#e5e7eb;
 }
 button{
   background:#38bdf8;
   font-weight:700;
+  cursor:pointer;
 }
-.hidden{display:none}
+#msg{color:#f87171}
 </style>
 </head>
+
 <body>
 
 <h2>Admin Login</h2>
 
-<input id="email" placeholder="Email">
+<input id="email" placeholder="Admin Email">
 <input id="password" type="password" placeholder="Password">
-<button onclick="login()">LOGIN</button>
-
-<div id="panel" class="hidden">
-  <h2>✅ ADMIN PANEL LOADED</h2>
-</div>
+<button onclick="login()">Login</button>
+<p id="msg"></p>
 
 <script>
-alert("JS loaded successfully");
-
 const SUPABASE_URL = "https://xdcscknfomlzwysczegc.supabase.co";
 const SUPABASE_ANON_KEY =
 "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhkY3Nja25mb21send5c2N6ZWdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MTYzMDMsImV4cCI6MjA4MzI5MjMwM30.E6o2wFFMOpK1DghLUqnxG6Ig09djy4bmDQexprhAiB4";
@@ -51,25 +55,33 @@ const supabaseClient = supabase.createClient(
   SUPABASE_ANON_KEY
 );
 
+// AUTO CHECK SESSION ON PAGE LOAD
+checkSession();
+
+async function checkSession(){
+  const { data } = await supabaseClient.auth.getSession();
+  if(data.session){
+    window.location.href = "dashboard.html";
+  }
+}
+
 async function login(){
-  alert("Login button clicked");
+  document.getElementById("msg").innerText="";
 
   const email = document.getElementById("email").value;
   const password = document.getElementById("password").value;
 
-  const { data, error } = await supabaseClient.auth.signInWithPassword({
+  const { error } = await supabaseClient.auth.signInWithPassword({
     email,
     password
   });
 
   if(error){
-    alert("ERROR: " + error.message);
+    document.getElementById("msg").innerText = error.message;
     return;
   }
 
-  alert("Login successful");
-
-  document.getElementById("panel").classList.remove("hidden");
+  window.location.href = "dashboard.html";
 }
 </script>
 
