--- a/login.html
+++ b/login.html
@@ -1,41 +1,85 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Login | CoinLuxora</title>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Login - Coinluxora</title>
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+<style>
+body{margin:0;font-family:system-ui;background:#020617;color:#e5e7eb;padding:16px}
+.box{max-width:500px;margin:40px auto;border:1px solid #1e293b;border-radius:14px;padding:18px;background:#020617}
+h2{margin:0 0 14px 0}
+input{width:100%;padding:12px;margin-bottom:10px;border-radius:10px;border:1px solid #1e293b;background:#020617;color:#e5e7eb}
+button{width:100%;padding:12px;border:none;border-radius:10px;background:#38bdf8;color:#020617;font-weight:800;cursor:pointer}
+a{color:#38bdf8;text-decoration:none;font-weight:800}
+.small{color:#94a3b8;font-size:13px;margin-top:10px}
+.ok{color:#22c55e}
+.err{color:#f87171}
+</style>
 </head>
 
-<body style="background:#0b0f19;color:white;font-family:Arial;padding:40px">
+<body>
 
-<h2>Login to CoinLuxora</h2>
+<div class="box">
+  <h2>Login</h2>
 
-<input id="email" placeholder="Email" /><br><br>
-<input id="password" type="password" placeholder="Password" /><br><br>
-<button onclick="login()">Login</button>
+  <input id="email" type="email" placeholder="Email address"/>
+  <input id="password" type="password" placeholder="Password"/>
 
-<p id="msg"></p>
+  <button onclick="login()">Login</button>
+
+  <p id="msg" class="small"></p>
+
+  <p class="small">
+    Don’t have an account?
+    <a href="signup.html">Sign Up</a>
+  </p>
+</div>
 
 <script>
-  const supabase = window.supabase.createClient(
-    "https://xdcscknfomlzwysczegc.supabase.co",
-    "PASTE_YOUR_ANON_KEY_HERE"
-  );
+const SUPABASE_URL="https://xdcscknfomlzwysczegc.supabase.co";
+const SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhkY3Nja25mb21send5c2N6ZWdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MTYzMDMsImV4cCI6MjA4MzI5MjMwM30.E6o2wFFMOpK1DghLUqnxG6Ig09djy4bmDQexprhAiB4";
+const supabaseClient=supabase.createClient(SUPABASE_URL,SUPABASE_ANON_KEY);
 
-  async function login() {
-    const email = document.getElementById("email").value;
-    const password = document.getElementById("password").value;
-
-    const { error } = await supabase.auth.signInWithPassword({
-      email,
-      password
-    });
-
-    if (error) {
-      document.getElementById("msg").innerText = error.message;
-    } else {
-      window.location.href = "dashboard.html";
-    }
+// If already logged in → go dashboard
+checkSession();
+async function checkSession(){
+  const { data } = await supabaseClient.auth.getSession();
+  if(data.session){
+    window.location.href="user-dashboard.html";
   }
+}
+
+async function login(){
+  const msg=document.getElementById("msg");
+  msg.innerHTML="Logging in…";
+
+  const email=document.getElementById("email").value.trim();
+  const password=document.getElementById("password").value;
+
+  if(!email || !password){
+    msg.innerHTML="<span class='err'>Fill all fields</span>";
+    return;
+  }
+
+  const { data, error } = await supabaseClient.auth.signInWithPassword({
+    email,
+    password
+  });
+
+  if(error){
+    msg.innerHTML="<span class='err'>"+error.message+"</span>";
+    return;
+  }
+
+  msg.innerHTML="<span class='ok'>Login successful ✅ Redirecting…</span>";
+
+  setTimeout(()=>{
+    window.location.href="user-dashboard.html";
+  }, 800);
+}
 </script>
 
 </body>
